--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,17 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# Keine Tabellengenerierung aufgrund von Annotationen
+spring.jpa.hibernate.ddl-auto=none
+
+# Tabellenschamas
 spring.sql.init.schema-locations=classpath:schema.sql
+
+# Zeilen
 spring.sql.init.data-locations=classpath:data.sql
 
+# Nutze die sql Dateien!
 spring.sql.init.mode=always
-
